--- a/client/index.html
+++ b/client/index.html
@@ -95,6 +95,9 @@
                     <button id="music-btn">
                         <img  src="./images/music.svg", <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"></svg>
                     </button>
+                    <audio controls muted hidden id="musicSource">
+                        <source src="./music/wu_ding.mp3" type="audio/mpeg">
+                    </audio>
                     <button id="leave-btn" style="background-color: #FF5050;">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M16 10v-5l8 7-8 7v-5h-8v-4h8zm-16-8v20h14v-2h-12v-16h12v-2h-14z"/></svg>
                     </button>
